--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^25.1.2",
+    "@types/node": "^13.7.0",
     "p5": "^0.10.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@types/p5": "^0.9.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "react-scripts": "^3.3.0"
   },
   "browserslist": {
